--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "next": "15.2.0",
     "next-themes": "^0.4.4",
     "node-appwrite": "^14.1.0",
+    "nuqs": "^2.4.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-use": "^17.6.0",
     "recharts": "^2.15.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.1",
